--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.8'
 }
