--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,6 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     //Gson
     implementation 'com.google.code.gson:gson:2.8.8'
+    //swipe - used in next section
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
