ktx kotlin room? coroutinescope unusable on windows??

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,14 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.8'
     //swipe - used in next section
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
+    //room
+    def room_version = "2.4.0-alpha04"
+    implementation "androidx.room:room-runtime:$room_version"
+    //annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt "androidx.room:room-compiler:$room_version" // For Kotlin use kapt instead // Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:$room_version"
+
+    // Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
 }
