--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     // https://mvnrepository.com/artifact/org.jetbrains.kotlinx/kotlinx-coroutines-core
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2")
     implementation 'androidx.annotation:annotation:1.3.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
 
 
     testImplementation 'junit:junit:4.+'
